# local-rag

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  Reranker.py  docker-compose.yml  main.py  pyproject.toml  rag.md  requirements.txt  start_server.py  test_chunker_demo.py
.github/workflows/: release.yml
.kiro/specs/local-rag-system/: design.md  requirements.md  tasks.md
app/: Embedding.py  __init__.py  main.py
app/api/: __init__.py  models.py  monitoring.py  routes.py
app/core/: __init__.py  chunker.py  config.py  document_processor.py  exceptions.py  logging_config.py  monitoring.py
app/middleware/: exception_handler.py  request_tracker.py
app/services/: __init__.py  database.py  document_service.py  model_loader.py  models.py  retriever.py  vector_store.py
app/templates/: admin.html  search.html
data/chroma_db/: chroma.sqlite3
docs/: API_EXAMPLES.md  MODEL_SETUP.md  TROUBLESHOOTING.md
scripts/: __init__.py  build.sh  bulk_ingest.py  debug_reranker.py  deploy.sh  download_models.py  download_models_v2.py
tests/: test_api_integration.py  test_api_models.py  test_bulk_ingest.py  test_chunker.py  test_config.py  test_database.py  test_database_integration.py  test_document_processor.py  test_document_service.py  test_document_service_integration.py  test_exception_handler.py  test_model_loader.py  test_monitoring.py  test_request_tracker.py  test_retriever.py  test_retriever_integration.py  test_vector_store.py  test_vector_store_integration.py
