[project]
name = "local-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "markdown>=3.4.0",
    "mypy>=1.7.0",
    "numpy>=1.24.0",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pluggy",
    "pygments",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "uvicorn[standard]>=0.23.0",
    "langchain-core>=0.3.72",
    "langchain-unstructured>=0.1.5",
    "langchain-text-splitters>=0.3.9",
    "unstructured[docx,pdf]>=0.18.11",
    "langchain-chroma>=0.2.5",
    "langchain-huggingface>=0.3.1",
    "langchain-community>=0.3.27",
    "jinja2>=3.1.6",
]
